--- a/index.html
+++ b/index.html
@@ -1,48 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Etalon html5</title>
-    <meta charset="utf-8" />
-    <meta name="description" content="Description of web page" />
-    <!--для поддержки мобильных устройств -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--link rel="stylesheet" href="style.css" />
-    <script-- src="script.js"></script-->
-    <style>
-      a[href$='.pdf' i] {
-        color: red;
-      }
-      #pageHeader {
-        height: 50px;
-        box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-          0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
-          0 22.3px 17.9px rgba(0, 0, 0, 0.042),
-          0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
-      }
-      :root {
-        background-color: blue;
-        color: white;
-      }
-
-      html {
-        background-color: red;
-        color: white;
-      }
-    </style>
-  </head>
-  <body>
-    <header id="pageHeader"><h1>Header</h1></header>
-    <!-- комментарий -->
-    <nav id="mainNav">Nav</nav>
-    <main id="content">
-      <pre><a href='dsdsd.PDF'>dsdsd.PDF</a>
-<a href='aaaaa.Pdf'>aaaaa.Pdf</a>
-<a href='bbbbbb.pdf'>bbbbbb.pdf</a>
-<a href='aaaaa.jpg'>aaaaa.jpg</a></pre>
-      <article id="mainArticle">Независимая часть документа или сайта</article>
-      <section>Объекты с общим смыслом</section>
-    </main>
-    <aside>id="siteAds">Ads</aside>
-    <footer id="pageFooter">Footer</footer>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta http-equiv="X-UA-Compatible" content="ie=edge"/><meta name="description" content="Description of web page"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="manifest.json"/><link rel="stylesheet" href="style.b0659d7dc4443867a6d9.css?f807980db5029bd3875f"/><title>Test Application</title></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>const globVar = 'Просто текст';</script><script src="main.a1ac72b40112646be233.js?f807980db5029bd3875f"></script></body></html>
